--- a/index.html
+++ b/index.html
@@ -1,1 +1,402 @@
-<h2>盛舜赋的个人主页</h2>
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>个人简历</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
+    <meta name="description" content="前端工程师，喜欢研究，喜欢学习，欢迎联系"/>
+    <meta name="author" content="盛舜赋 Christopher age:24 "/>
+    <meta name="keywords" content="求职 前端"/>
+    <meta name="contact" content="tel 13328975330 e-mail:shengshunfu@gmail.com"/>
+
+    <link rel="shortcut icon" href="./images/favicon.png"/>
+
+    <!--lib css-->
+    <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css"/>
+    <link rel="stylesheet" href="css/jquery.fullPage.css"/>
+    <link rel="stylesheet" href="css/animate.css">
+
+    <!--personal css-->
+    <link rel="stylesheet" href="css/index.css"/>
+</head>
+<body>
+<!--导航栏-->
+<nav class="navbar navbar-default resume">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand EngName" data-menuanchor="page1" href="#page1">Christopher</a>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right" id="menu">
+                <li data-menuanchor="page2" class="active">
+                    <a href="#page2">基本资料</a>
+                </li>
+                <li data-menuanchor="page3">
+                    <a href="#page3">专业技能</a>
+                </li>
+                <li data-menuanchor="page4">
+                    <a href="#page4">工作经历</a>
+                </li>
+                <li data-menuanchor="page5">
+                    <a href="#page5">项目经验</a>
+                </li>
+                <li data-menuanchor="page6">
+                    <a href="#page6">自我评价</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<!--第四个页面的天空和云朵，其他页面为隐藏状态-->
+<div class="guns sky">
+    <div class="clouds_one"></div>
+    <div class="clouds_two"></div>
+    <div class="clouds_three"></div>
+</div>
+<!--最后一个页面使用-->
+<div class="pure">
+
+</div>
+<!--整体页面容器，fullPage插件配置对象-->
+<div id="resume">
+    <!--第一部分内容-->
+    <div class="section item-1">
+        <div class="row word">
+            <span class="resume-hide">前端工程师</span>
+            <span class="hidden-xs resume-hide">简历</span>
+            <span class="col-xs-12 hidden-sm hidden-md hidden-lg resume-hide">简历</span>
+
+            <p class="motto resume-hide hinge-sty" style="position: relative">爱技术，爱生活</p>
+            <!--圆形下标，跳转下一页-->
+            <a href="#" class="next-page ">
+                <span class="glyphicon glyphicon-chevron-down"></span>
+            </a>
+        </div>
+
+        <!--四个边角图-->
+        <div class="corner1 corner">
+            <img src="./images/page_home/1.png" alt=""/>
+        </div>
+        <div class="corner2 corner">
+            <img src="./images/page_home/2.png" alt=""/>
+        </div>
+        <div class="corner3 corner">
+            <img src="./images/page_home/3.png" alt=""/>
+        </div>
+        <div class="corner4 corner">
+            <img src="./images/page_home/4.png" alt=""/>
+        </div>
+
+    </div>
+
+
+
+    <!--第二部分内容-->
+    <div class="section item-2">
+        <!--动态添加一个div标签，display为table-cell，实现垂直居中-->
+        <div class="container">
+            <h class='hidden-xs hidden-sm page2-title'>基本资料</h>
+            <div class="row">
+                <div class=" icon-infomation col-xs-6 col-sm-6 col-md-3">
+                    <img src="./images/page-2/glass.png" alt="">
+                    <h4>基本信息</h4>
+                    <p>
+                        姓名: 盛舜赋 男
+                        <br>
+                        年龄: 24岁 籍贯：福建
+                    </p>
+                </div>
+                <div class=" icon-infomation col-xs-6 col-sm-6 col-md-3">
+                    <img src="./images/page-2/hat.png" alt="">
+                    <h4>毕业院校</h4>
+                    <p>
+                        泉州师范学院
+                    </p>
+
+                </div>
+                <div class=" icon-infomation col-xs-6 col-sm-6 col-md-3">
+                    <img src="./images/page-2/book.png" alt="">
+                    <h4>学历和专业</h4>
+                    <p>
+                        计算机科学与技术 本科
+                        <br>
+                        专业技能 编程
+                    </p>
+                </div>
+                <div class=" icon-infomation col-xs-6 col-sm-6 col-md-3">
+                    <img src="./images/page-2/tel.png" alt="">
+                    <h4>联系方式</h4>
+                    <p>
+                        邮箱 shengshunfu@gmail.com
+                        <br>
+                        电话 13328975330
+                    </p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+    <!--第三部分内容-->
+    <div class="section item-3">
+        <div class="container">
+            <div class="img-3 hidden-xs">
+                <img src="./images/page-3/5(2).png" alt="">
+            </div>
+            <div class="bg-img hidden-xs hidden-sm">
+                <img src="./images/page-3/1(4).png" alt="">
+            </div>
+            <div class="sm-img fly hidden-xs hidden-sm">
+                <img src="./images/page-3/2(3).png" alt="">
+            </div>
+
+
+            <div class="skill-introduce">
+                <div class="media">
+                    <div class="media-left media-top">
+                        <a href="#" class=''>
+                            <img class="media-object" src="./images/page-3/tv8.png">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading">基本技能</h4>
+                        <p>
+                            精通 html5 &nbsp css3 &nbsp javaScript，熟悉W3C标准，对表现与数据分离、Web语义化等有深刻理解<br>
+                            精通jQuery，熟悉常见的jQuery第三方插件，如highcharts、validate、fullpage、Vmc Slider等<br>
+                            熟练使用客户端js做ajax请求，了解同源策略以及如何解决js的跨域请求限制问题
+                            <br>熟悉nodejs，熟练掌握express框架
+                            <br>熟悉requirejs，了解commonJS、amd、cdm三种设计规范之间的差异
+                            <br>熟练使用前端自动化构建工具gulp、webpack等
+                            <br>掌握backboneJS、vueJS、angularJS等主流的前端开发框架
+                        </p>
+
+                    </div>
+                </div>
+                <div class="media ">
+                    <div class="media-left media-top">
+                        <a href="#" class=''>
+                            <img class="media-object" src="./images/page-3/apple6.png">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading">移动开发</h4>
+                        <p>熟悉常见的前端ui框架，如bootstrap、sui、mui、weui、element等
+                            <br>熟练使用bootstrap对页面做响应式开发，惯用媒体查询适配各种移动设备的页面展示
+                        </p>
+
+                    </div>
+                </div>
+                <div class="media ">
+                    <div class="media-left media-top">
+                        <a href="#" class=''>
+                            <img class="media-object" src="./images/page-3/baterry10.png" alt="">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading">其他</h4>
+                        <p>熟练掌握python，曾用python做过web开发和爬虫
+                            <br>了解类unix系统，熟悉linux的shell命令
+                            <br>熟练使用git源代码版本管理工具，熟悉markdown语法
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="skills hidden-xs">
+                <span class="subject-9">requireJS</span>
+                <span class="subject-2">Bootstrap</span>
+                <span class="subject-3">Backbone</span>
+                <span class="subject-4">jQuery</span>
+                <span class="subject-10">Angular</span>
+                <span class="subject-5">移动端</span>
+                <span class="subject-6">CSS3</span>
+                <span class="subject-7">Ajax</span>
+                <span class="subject-8">Nodejs</span>
+                <span class="subject-1">HTML5</span>
+            </div>
+        </div>
+    </div>
+
+
+    <!--第四部分内容-->
+    <div class="section item-4" id='item-4'>
+        <div class="container">
+            <span class='title hidden-xs  hidden-sm' style='display: inline-block'>个人经历</span>
+            <span class='sign col-xs-12 hidden-xs  hidden-sm' style='font-size: 20px'>热爱技术,专注用户体验</span>
+            <div class="row">
+                <div class="col-xs-8 col-md-4">
+                    <div class="thumbnail">
+                        <img src="./images/page-4/school.jpg" class=' img-circle team-img' alt="">
+                        <div class="caption">
+                            <h3>泉州师范学院</h3>
+                            <p>计算机科学与技术专业</p>
+                            <p>使用python开发web，撰写爬虫，拥有hadoop相关项目经历</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-8 col-md-4">
+                    <div class="thumbnail">
+                        <img src="./images/page-4/zhiyou.png" class='img-circle team-img' alt="">
+                        <div class="caption">
+                            <h3>智游网安科技</h3>
+                            <p>web前端工程师</p>
+                            <p>根据ui设计师制作的效果,实现静态html页面,配合后端开发人员完成部分页面的数据交互</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-8 col-md-4">
+                    <div class="thumbnail">
+                        <img src="./images/page-4/huichen.png" class='img-circle team-img' alt="">
+                        <div class="caption">
+                            <h3>杭州汇晨科技</h3>
+                            <p>web前端工程师</p>
+                            <p>根据ui设计师制作的效果,实现静态html页面，移动端网页开发，网站二次开发</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+    <!--第五部分内容-->
+    <div class="section item-5">
+
+        <div style="width: 100%" class="hidden-xs">
+            <div class="container" id='container-img'>
+                <div class="row">
+                    <div class="portfolio-items">
+                        <div class="col-sm-6 col-md-3 col-lg-3 web">
+                            <div class="portfolio-item">
+                                <div class="hover-bg">
+                                    <div class="hover-text">
+                                        <h4><a href='http://www.vsochina.com/index.html' target='_blank' title="蓝海创意云">蓝海创意云</a></h4>
+                                        <small>技术：html+css+jQuery+bootstrap</small>
+                                        <i class="fa fa-search"></i></div>
+                                    <img src="img/01.png" class="img-responsive" alt="蓝海创意云">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-6 col-md-3 col-lg-3">
+                            <div class="portfolio-item">
+                                <div class="hover-bg">
+                                    <div class="hover-text">
+                                        <h4><a href="http://www.siankeji.cn/" target='_blank' title="斯安科技">斯安科技</a></h4>
+                                        <small>技术：html+css+jQuery</small>
+                                    </div>
+                                    <img src="img/02.png" class="img-responsive" alt="斯安科技"></div>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-6 col-md-3 col-lg-3">
+                            <div class="portfolio-item">
+                                <div class="hover-bg">
+                                    <div class="hover-text">
+                                        <h4><a href="http://yueban.cn/index.php" target='_blank' title="约伴网">约伴网</a></h4>
+                                        <small>技术：Bootstrap+Less+JQuery</small>
+                                    </div>
+                                    <img src="img/03.png" class="img-responsive" alt="约伴网"></div>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-6 col-md-3 col-lg-3">
+                            <div class="portfolio-item">
+                                <div class="hover-bg">
+                                    <div class="hover-text">
+                                        <h4><a href='http://www.baidu.com' target='_blank' title="">电商活动页面</a></h4>
+                                        <small>技术：Bootstrap+JQuery</small>
+                                    </div>
+                                    <img src="img/04.jpg" class="img-responsive" alt=""></div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-3 col-lg-3">
+                            <div class="portfolio-item">
+                                <div class="hover-bg">
+                                    <div class="hover-text">
+                                        <h4><a href="http://www.siankeji.cn/" target='_blank' title="斯安科技">斯安科技</a></h4>
+                                        <small>技术：html+css+jQuery</small>
+                                    </div>
+                                    <img src="img/02.png" class="img-responsive" alt="斯安科技"></div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-3 col-lg-3">
+                            <div class="portfolio-item">
+                                <div class="hover-bg">
+                                    <div class="hover-text">
+                                        <h4><a href="javascript:;" target='_blank' title="D"></a>装饰用</h4>
+                                        <small>技术：Bootstrap+JQuery</small>
+                                    </div>
+                                    <img src="img/06.jpg" class="img-responsive" alt="装饰用"></div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-3 col-lg-3">
+                            <div class="portfolio-item">
+                                <div class="hover-bg">
+                                    <div class="hover-text">
+                                        <h4><a href="javascript:;" target='_blank' title="个人博客">个人博客</a></h4>
+                                        <small>技术：HTMl+CSS+JS+Wordpress</small>
+                                    </div>
+                                    <img src="img/07.jpg" class="img-responsive" alt="个人博客"></div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-3 col-lg-3">
+                            <div class="portfolio-item">
+
+                                <div class="hover-bg">
+                                    <div class="hover-text">
+                                        <h4><a href='javascript:;' target='_blank' title="软装大师">软装大师 </a></h4>
+                                        <small>技术：Bootstrap+JQuery</small>
+                                    </div>
+                                    <img src="img/08.jpg" class="img-responsive" alt="软装大师">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+    </div>
+
+
+    <!--第六部分内容-->
+    <div class="section item-6">
+        <h1>About Me</h1>
+        <div class="word">
+        <p>
+            有责任，工作踏实，性格开朗乐观，积极上进
+        </p>
+        </div>
+    <div class="word">
+        <p>
+           经常混迹各大技术社区，并时刻关注业界动态以及新技术<br>
+        </p>
+    </div>
+    <div class="word">
+        <p>
+            喜欢js这类解释型脚本语言，喜欢钻研新的技术</br>具有较强的自学能力和良好的学习方法，并热衷于新技术的原理和应用
+        </p>
+    </div>
+        <div class="top"></div>
+        <div class="foot"></div>
+    </div>
+</div>
+</body>
+</html>
+<script src="lib/jquery.min.js"></script>
+<script src="lib/jquery.fullPage.min.js"></script>
+<script src="lib/jquery.easing.1.3.js"></script>
+<script src="lib/jquery.isotope.js"></script>
+<script src="lib/bootstrap/js/bootstrap.js"></script>
+<script src="js/resumeEnter.js"></script>
