添加一些基本信息

--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <title>个人简历</title>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
-    <meta name="description" content="前端工程师，喜欢研究，喜欢学习，欢迎联系"/>
     <meta name="author" content="盛舜赋 Christopher age:24 "/>
-    <meta name="keywords" content="求职 前端"/>
     <meta name="contact" content="tel 13328975330 e-mail:shengshunfu@gmail.com"/>
 
     <link rel="shortcut icon" href="./images/favicon.png"/>
@@ -245,11 +243,11 @@
                 </div>
                 <div class="col-xs-8 col-md-4">
                     <div class="thumbnail">
-                        <img src="./images/page-4/zhiyou.png" class='img-circle team-img' alt="">
+                        <img src="./images/page-4/datartisan.png" class='img-circle team-img' alt="">
                         <div class="caption">
-                            <h3>智游网安科技</h3>
+                            <h3>数据工匠</h3>
                             <p>web前端工程师</p>
-                            <p>根据ui设计师制作的效果,实现静态html页面,配合后端开发人员完成部分页面的数据交互</p>
+                            <p>负责维护公司的门户网站，实现公司自营产品的页面展示，完成前端页面与后台的数据交互；兼职爬虫的编写</p>
                         </div>
                     </div>
                 </div>
@@ -259,7 +257,7 @@
                         <div class="caption">
                             <h3>杭州汇晨科技</h3>
                             <p>web前端工程师</p>
-                            <p>根据ui设计师制作的效果,实现静态html页面，移动端网页开发，网站二次开发</p>
+                            <p>根据ui设计师制作的效果,实现静态html页面,配合后端开发人员完成部分页面的数据交互；移动端网页开发，网站二次开发</p>
                         </div>
                     </div>
                 </div>
@@ -375,12 +373,12 @@
         <h1>About Me</h1>
         <div class="word">
         <p>
-            有责任，工作踏实，性格开朗乐观，积极上进
+            有责任，工作踏实，性格开朗乐观，积极上进，热爱骑行，跑步和乒乓球
         </p>
         </div>
     <div class="word">
         <p>
-           经常混迹各大技术社区，并时刻关注业界动态以及新技术<br>
+           经常泡在伯乐在线、知乎、CSDN等社区，关注业界动态以及新事物的问世，遇到的问题在stackOverflow上常常能得到多角度的见解<br>
         </p>
     </div>
     <div class="word">
