--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="盛舜赋 Christopher age:24 "/>
     <meta name="contact" content="tel 13328975330 e-mail:shengshunfu@gmail.com"/>
 
-    <link rel="shortcut icon" href="./images/favicon.png"/>
+    <link rel="shortcut icon" href="./images/favicon.ico"/>
 
     <!--lib css-->
     <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css"/>
