完善项目经历

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>个人简历</title>
+    <title>盛舜赋-个人主页</title>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
     <meta name="author" content="盛舜赋 Christopher age:24 "/>
@@ -69,8 +69,8 @@
     <div class="section item-1">
         <div class="row word">
             <span class="resume-hide">前端工程师</span>
-            <span class="hidden-xs resume-hide">简历</span>
-            <span class="col-xs-12 hidden-sm hidden-md hidden-lg resume-hide">简历</span>
+            <span class="hidden-xs resume-hide">盛舜赋</span>
+            <span class="col-xs-12 hidden-sm hidden-md hidden-lg resume-hide">盛舜赋</span>
 
             <p class="motto resume-hide hinge-sty" style="position: relative">爱技术，爱生活</p>
             <!--圆形下标，跳转下一页-->
@@ -201,7 +201,7 @@
                     </div>
                     <div class="media-body">
                         <h4 class="media-heading">其他</h4>
-                        <p>熟练掌握python，曾用python做过web开发和爬虫
+                        <p>熟练掌握python，曾用python做过web开发和爬虫脚本
                             <br>了解类unix系统，熟悉linux的shell命令
                             <br>熟练使用git源代码版本管理工具，熟悉markdown语法
                         </p>
@@ -243,11 +243,11 @@
                 </div>
                 <div class="col-xs-8 col-md-4">
                     <div class="thumbnail">
-                        <img src="./images/page-4/datartisan.png" class='img-circle team-img' alt="">
+                        <img src="./images/page-4/bijv01.jpg" class='img-circle team-img' alt="">
                         <div class="caption">
-                            <h3>数据工匠</h3>
+                            <h3>厦门必聚网络科技</h3>
                             <p>web前端工程师</p>
-                            <p>负责维护公司的门户网站，实现公司自营产品的页面展示，完成前端页面与后台的数据交互；兼职爬虫的编写</p>
+                            <p>负责将ui设计效果通过html页面展示出来；参与某些网站的二次开发，并实现项目的模块化拆分；配合后端开发人员通过ajax方式完成部分页面的局部加载</p>
                         </div>
                     </div>
                 </div>
@@ -257,7 +257,7 @@
                         <div class="caption">
                             <h3>杭州汇晨科技</h3>
                             <p>web前端工程师</p>
-                            <p>根据ui设计师制作的效果,实现静态html页面,配合后端开发人员完成部分页面的数据交互；移动端网页开发，网站二次开发</p>
+                            <p>根据ui设计师制作的效果,实现静态html页面,配合后端开发人员完成部分页面的数据交互；移动端网页开发</p>
                         </div>
                     </div>
                 </div>
@@ -279,7 +279,7 @@
                                 <div class="hover-bg">
                                     <div class="hover-text">
                                         <h4><a href='http://www.vsochina.com/index.html' target='_blank' title="蓝海创意云">蓝海创意云</a></h4>
-                                        <small>技术：html+css+jQuery+bootstrap</small>
+                                        <small>技术：html+jQuery+bootstrap+webpack+vuejs</small>
                                         <i class="fa fa-search"></i></div>
                                     <img src="img/01.png" class="img-responsive" alt="蓝海创意云">
                                 </div>
@@ -301,10 +301,10 @@
                             <div class="portfolio-item">
                                 <div class="hover-bg">
                                     <div class="hover-text">
-                                        <h4><a href="http://yueban.cn/index.php" target='_blank' title="约伴网">约伴网</a></h4>
-                                        <small>技术：Bootstrap+Less+JQuery</small>
+                                        <h4><a href="http://www.tripg.cn/" target='_blank' title="差旅天下">差旅天下</a></h4>
+                                        <small>技术：html+xhtml+css+jQuery</small>
                                     </div>
-                                    <img src="img/03.png" class="img-responsive" alt="约伴网"></div>
+                                    <img src="img/03.png" class="img-responsive" alt="差旅天下"></div>
                             </div>
                         </div>
 
@@ -312,40 +312,40 @@
                             <div class="portfolio-item">
                                 <div class="hover-bg">
                                     <div class="hover-text">
-                                        <h4><a href='http://www.baidu.com' target='_blank' title="">电商活动页面</a></h4>
-                                        <small>技术：Bootstrap+JQuery</small>
+                                        <h4><a href='http://m.ishop.cn/' target='_blank' title="ishop爱购网">ishop爱购网</a></h4>
+                                        <small>技术：html+css+js+jQuery</small>
                                     </div>
-                                    <img src="img/04.jpg" class="img-responsive" alt=""></div>
+                                    <img src="img/04.png" class="img-responsive" alt="爱购网"></div>
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-3 col-lg-3">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
                                     <div class="hover-text">
-                                        <h4><a href="http://www.siankeji.cn/" target='_blank' title="斯安科技">斯安科技</a></h4>
-                                        <small>技术：html+css+jQuery</small>
+                                        <h4><a href="https://github.com/ShunfuSheng/flea-market.git" target='_blank' title="跳蚤市场">跳蚤市场(个人项目)</a></h4>
+                                        <small>技术：html+bootstrap+python+Django+mysql</small>
                                     </div>
-                                    <img src="img/02.png" class="img-responsive" alt="斯安科技"></div>
+                                    <img src="img/05.png" class="img-responsive" alt="跳蚤市场"></div>
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-3 col-lg-3">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
                                     <div class="hover-text">
-                                        <h4><a href="javascript:;" target='_blank' title="D"></a>装饰用</h4>
-                                        <small>技术：Bootstrap+JQuery</small>
+                                        <h4><a href="http://m.cct.cn/" target='_blank' title="康辉旅游网">康辉旅游网</a></h4>
+                                        <small>技术：html+css+jQuery+bootstrap</small>
                                     </div>
-                                    <img src="img/06.jpg" class="img-responsive" alt="装饰用"></div>
+                                    <img src="img/06.png" class="img-responsive" alt="康辉旅游网"></div>
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-3 col-lg-3">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
                                     <div class="hover-text">
-                                        <h4><a href="javascript:;" target='_blank' title="个人博客">个人博客</a></h4>
-                                        <small>技术：HTMl+CSS+JS+Wordpress</small>
+                                        <h4><a href="https://github.com/ShunfuSheng/backboneProject.git" target='_blank' title="学生图书借阅系统">基于backbone框架的学生图书借阅系统</a></h4>
+                                        <small>技术：html+backbone+requirejs+jQuery+weui+express+mongodb</small>
                                     </div>
-                                    <img src="img/07.jpg" class="img-responsive" alt="个人博客"></div>
+                                    <img src="img/07.png" class="img-responsive" alt="学生图书借阅系统"></div>
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-3 col-lg-3">
@@ -353,10 +353,10 @@
 
                                 <div class="hover-bg">
                                     <div class="hover-text">
-                                        <h4><a href='javascript:;' target='_blank' title="软装大师">软装大师 </a></h4>
-                                        <small>技术：Bootstrap+JQuery</small>
+                                        <h4><a href='https://github.com/ShunfuSheng/agriculture.git' target='_blank' title="温江红枫">温江红枫(个人项目)</a></h4>
+                                        <small>技术：html+css+JQuery</small>
                                     </div>
-                                    <img src="img/08.jpg" class="img-responsive" alt="软装大师">
+                                    <img src="img/08.png" class="img-responsive" alt="温江红枫">
                                 </div>
                             </div>
                         </div>
