删除部分alt属性做测试

--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@
     <div class="section item-3">
         <div class="container">
             <div class="img-3 hidden-xs">
-                <img src="./images/page-3/5(2).png" alt="">
+                <img src="./images/page-3/5(2).png">
             </div>
             <div class="bg-img hidden-xs hidden-sm">
-                <img src="./images/page-3/1(4).png" alt="">
+                <img src="./images/page-3/1(4).png">
             </div>
             <div class="sm-img fly hidden-xs hidden-sm">
-                <img src="./images/page-3/2(3).png" alt="">
+                <img src="./images/page-3/2(3).png">
             </div>
 
 
