修改公司信息

--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@
     <div class="section item-3">
         <div class="container">
             <div class="img-3 hidden-xs">
-                <img src="./images/page-3/5(2).png">
+                <img src="./images/page-3/5(2).png" alt="">
             </div>
             <div class="bg-img hidden-xs hidden-sm">
-                <img src="./images/page-3/1(4).png">
+                <img src="./images/page-3/1(4).png" alt="">
             </div>
             <div class="sm-img fly hidden-xs hidden-sm">
-                <img src="./images/page-3/2(3).png">
+                <img src="./images/page-3/2(3).png" alt="">
             </div>
 
 
@@ -245,9 +245,9 @@
                     <div class="thumbnail">
                         <img src="./images/page-4/bijv01.jpg" class='img-circle team-img' alt="">
                         <div class="caption">
-                            <h3>厦门必聚网络科技</h3>
-                            <p>web前端工程师</p>
-                            <p>负责将ui设计效果通过html页面展示出来；参与某些网站的二次开发，并实现项目的模块化拆分；配合后端开发人员通过ajax方式完成部分页面的局部加载</p>
+                            <h3>数据工匠</h3>
+                            <p>爬虫兼web开发工程师</p>
+                            <p>主要的开发语言是python和PHP，负责撰写网络爬虫，公司内部网站的维护工作</p>
                         </div>
                     </div>
                 </div>
@@ -255,7 +255,7 @@
                     <div class="thumbnail">
                         <img src="./images/page-4/huichen.png" class='img-circle team-img' alt="">
                         <div class="caption">
-                            <h3>杭州汇晨科技</h3>
+                            <h3>智游网安科技有限公司</h3>
                             <p>web前端工程师</p>
                             <p>根据ui设计师制作的效果,实现静态html页面,配合后端开发人员完成部分页面的数据交互；移动端网页开发</p>
                         </div>
